  * At long last, support for distributed-memory parallel machines
    with MPI.  The computation time (and memory usage) can often improve
    nearly linearly with the number of processors.  Thanks to
    Clarendon Photonics for funding this work.

  * Fixed bug in mpbi where artifacts could be introduced in 3d field
    and dielectric-function output files.  (This only affected the
    output files, not the frequency eigenvalues, etcetera.)  Thanks
    to Michelle Povinelli for the bug report.

  * Added new material-function material type, so that you can now
    specify that the dielectric tensor be an arbitrary function of
    position.  Thanks to Peter Bermel for needing this.

  * If MPB is configured with the flag --with-hermitian-epsilon, then
    complex-hermitian dielectric tensors (corresponding to magnetic
    materials, which break time-reversal symmetry) are supported.
    Thanks to Shanhui Fan for pestering me about this.

  * Eliminated output-copies input variable; if you want to visualize
    multiple unit cells, you should use mpb-data.

  * Added new "nothing" material that punches a hole through other
    objects to the background.  (This is distinct from default-material
    when epsilon-input-file is used, or for compute-energy-in-objects.)

  * Fixed inability of MPB 0.13 to run under an old version (1.2) of Guile.

  * Now gives an error if k-point or dielectric tensor is incompatible with
    run-te/run-tm, or if the dielectric tensor is not positive-definite.

  * Default to vendor cc instead of gcc, so that C and Fortran compilers
    are in sync.  (We default to the vendor f77 because it was probably
    used to compile LAPACK/BLAS, and Fortran libraries are picky.)

  * The manual now cites our recent publication on the methods behind MPB.

  * Bug fix in compute-energy-in-object-list for non-orthogonal lattices.

  * Bug fix in combine-band-functions and other functions of band functions,