@@ -61,6 +61,9 @@ fi
 BUILD_MPB_DATA=mpb-data  # mpb-data program to build, if any
 AC_SUBST(BUILD_MPB_DATA)
 
+INSTALL_MPB_SPLIT=install-mpb-split  # mpb-split target to install, if any
+AC_SUBST(INSTALL_MPB_SPLIT)
+
 AC_ARG_WITH(inv-symmetry,[  --with-inv-symmetry     take advantage of (and require) inv. sym.], inv_sym=$withval, inv_sym=no)
 if test "$inv_sym" = "no"; then
         AC_DEFINE(SCALAR_COMPLEX)
@@ -262,6 +265,8 @@ if test "x$with_mpi" = "xyes"; then
 	AC_DEFINE(HAVE_MPI,1,[Define if you have & link an MPI library.])
 
 	BUILD_MPB_DATA="" # don't build/install MPI-linked mpb-data
+	INSTALL_MPB_SPLIT="" # don't install mpb-split, since we don't know
+	                     # how to run mpb-mpi in general
 fi
 
 # ----------------------------------------------------------------------
